# dcr_rover

./: README.md  startCamera.sh
.devcontainer/: Dockerfile  devcontainer.json
rover_ws/: startRover.sh
rover_ws/src/dcr_interfaces/: CMakeLists.txt  package.xml
rover_ws/src/dcr_interfaces/msg/: ESP32LED.msg
rover_ws/src/dcr_interfaces/srv/: ESP32LEDCommand.srv  MotorMovementCommand.srv
rover_ws/src/dcr_joy_to_motor/: package.xml  setup.cfg  setup.py
rover_ws/src/dcr_joy_to_motor/dcr_joy_to_motor/: main.py
rover_ws/src/dcr_motor_controller/: package.xml  setup.cfg  setup.py
rover_ws/src/dcr_motor_controller/dcr_motor_controller/: BLD_305s.py  main.py
rover_ws/src/motor_node/: package.xml  setup.py
rover_ws/src/motor_node/launch/: launch_arm.py
rover_ws/src/motor_node/motor_node/: controller.py  iksolve.py
rover_ws/src/motor_node/urdf/: arm.urdf
rover_ws/src/rover_antenna/: package.xml  setup.cfg  setup.py
rover_ws/src/rover_antenna/rover_antenna/: antenna_node.py
rover_ws/src/rover_bringup/: CMakeLists.txt  package.xml
rover_ws/src/rover_bringup/config/: cameras.yaml
rover_ws/src/rover_bringup/launch/: bringup.launch.xml
rover_ws/src/rover_camera/: package.xml  setup.py
rover_ws/src/rover_camera/rover_camera/: camera_node.py
rover_ws/src/rover_control/: CMakeLists.txt  package.xml
rover_ws/src/rover_control/config/: controllers.yaml
rover_ws/src/rover_control/launch/: control.launch.xml
rover_ws/src/rover_description/: CMakeLists.txt  package.xml
rover_ws/src/rover_description/launch/: display.launch.xml
rover_ws/src/rover_description/rviz/: rover.rviz  urdf.rviz
rover_ws/src/rover_description/urdf/: rover.urdf
rover_ws/src/rover_motor_driver/: CMakeLists.txt  package.xml  rover_motor_driver.xml
rover_ws/src/rover_motor_driver/include/rover_motor_driver/: bld305s_hardware.hpp
rover_ws/src/rover_motor_driver/src/: bld305s_hardware.cpp
rover_ws/src/web_video_server/include/web_video_server/: utils.hpp
