<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mirmisbahali@hotmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>nobleo_socketcan_bridge</exec_depend>
  <exec_depend>motor_node</exec_depend>
  <exec_depend>dcr_motor_controller</exec_depend>
  <exec_depend>dcr_joy_to_motor</exec_depend>
  <exec_depend>rover_camera</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
